--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "moment": "^2.14.1",
     "react": "^15.2.1",
     "react-datepicker": "^0.28.2",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "react-faux-dom": "^2.7.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
